Fix mobile application stepper alignment

--- a/static/wb/css/form-enhancements.css
+++ b/static/wb/css/form-enhancements.css
@@ -537,13 +537,14 @@
     border-radius: 16px;
   }
 
-  .application-stepper {
+  .application-portal .application-stepper {
     top: 64px;
-    margin-left: -16px;
-    margin-right: -16px;
-    border-left: 0;
-    border-right: 0;
-    border-radius: 0;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    border-left: 1px solid rgba(109, 15, 26, .14);
+    border-right: 1px solid rgba(109, 15, 26, .14);
+    border-radius: 14px;
   }
 
   .application-wizard::before {
